--- a/BulletinBoard/src/main/resources/application.properties
+++ b/BulletinBoard/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/bulletin_board
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+datasource.url=jdbc:postgresql://localhost:5432/bulletin_board
+datasource.username=${DATASOURCE_USER}
+datasource.password=${DATASOURCE_PASSWORD}
+datasource.driver=org.postgresql.Driver
 
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
